// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`TextInput > renders contrast 1`] = `
<div>
  <span
    aria-busy="false"
    class="TextInput-wrapper prc-components-TextInputWrapper-i1ofR prc-components-TextInputBaseWrapper-ueK9q"
    data-contrast="true"
  >
    <input
      class="prc-components-Input-Ic-y8"
      data-component="input"
      name="zipcode"
      type="text"
    />
  </span>
</div>
`;

exports[`TextInput > renders error 1`] = `
<div>
  <span
    aria-busy="false"
    class="TextInput-wrapper prc-components-TextInputWrapper-i1ofR prc-components-TextInputBaseWrapper-ueK9q"
    data-validation="error"
  >
    <input
      aria-invalid="true"
      class="prc-components-Input-Ic-y8"
      data-component="input"
      name="zipcode"
      type="text"
    />
  </span>
</div>
`;

exports[`TextInput > renders monospace 1`] = `
<div>
  <span
    aria-busy="false"
    class="TextInput-wrapper prc-components-TextInputWrapper-i1ofR prc-components-TextInputBaseWrapper-ueK9q"
    data-monospace="true"
  >
    <input
      class="prc-components-Input-Ic-y8"
      data-component="input"
      name="zipcode"
      type="text"
    />
  </span>
</div>
`;

exports[`TextInput > renders placeholder 1`] = `
<div>
  <span
    aria-busy="false"
    class="TextInput-wrapper prc-components-TextInputWrapper-i1ofR prc-components-TextInputBaseWrapper-ueK9q"
  >
    <input
      class="prc-components-Input-Ic-y8"
      data-component="input"
      name="zipcode"
      placeholder="560076"
      type="text"
    />
  </span>
</div>
`;

exports[`TextInput > should render a password input 1`] = `
<div>
  <span
    aria-busy="false"
    class="TextInput-wrapper prc-components-TextInputWrapper-i1ofR prc-components-TextInputBaseWrapper-ueK9q"
  >
    <input
      class="prc-components-Input-Ic-y8"
      data-component="input"
      name="password"
      type="password"
    />
  </span>
</div>
`;
